# whisperme

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: fix.md
.github/workflows/: release.yml
scripts/: build-app.sh  entitlements.plist  install.sh  launcher.c  make-dmg.sh  make_dmg_background.py  make_icon.py  release.sh  sign-app.sh
src/whisperme/: __main__.py  app.py  autofix.py  autostart.py  config.py  download_window.py  hotkey.py  models.py  overlay.py  paster.py  paths.py  permissions.py  postprocess.py  recorder.py  statusbar.py  voice_commands.py
