[project]
name = "whisperme"
version = "0.1.0"
description = "Local push-to-talk voice dictation for macOS"
requires-python = ">=3.11"
dependencies = [
    "RealtimeSTT",
    "pyobjc-framework-Cocoa",
    "pynput",
    "apple-fm-sdk",
]

[project.scripts]
whisperme = "whisperme.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisperme"]
